Replace bootstrap-collapse; fixes collapse bug

--- a/app/assets/stylesheets/base/patterns.css.scss
+++ b/app/assets/stylesheets/base/patterns.css.scss
@@ -711,7 +711,6 @@ color:$nearBlack;
 .collapse-toggle {
     &:hover {
         cursor:pointer;
-        text-decoration:underline;
     }
     .caret {
         margin:10px 2px 0 0;
